Move some parts to URI