@@ -15,6 +15,8 @@ import org.gradle.api.tasks.TaskAction;
 import java.io.File;
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.util.zip.ZipEntry;
@@ -30,7 +32,7 @@ public class ObtainFernFlowerTask extends DefaultTask {
     private DelayedFile ffJar;
 
     @TaskAction
-    public void doTask() throws IOException {
+    public void doTask() throws IOException, URISyntaxException {
         if (isOffline) {
             getLogger().error("Offline mode! not downloading Fernflower!");
             this.setDidWork(false);
@@ -42,7 +44,7 @@ public class ObtainFernFlowerTask extends DefaultTask {
         getLogger().debug("Downloading " + url);
         getLogger().debug("Fernflower output location " + ff);
 
-        HttpURLConnection connect = (HttpURLConnection) (new URL(url)).openConnection();
+        HttpURLConnection connect = (HttpURLConnection) new URI(url).toURL().openConnection();
         connect.setRequestProperty("User-Agent", Constants.USER_AGENT);
         connect.setInstanceFollowRedirects(true);
 
